# EvilFontTool

./: .gitignore  LICENSE  README.md  evilfonttool.py  index.html  pyproject.toml  requirements.txt  style.css  template.html
html_demo/: evilfont.html  fonts.css  javascript.html  styles.css
src/evilfonttool/: __init__.py  __main__.py  _core.py  cli.py
src/evilfonttool/data/: template.html
