[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evilfonttool"
version = "2.0.2"
description = "A font-based deception tool for red teaming, security research, and whatever else."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "brotli",
    "fonttools",
    "pdf2image",
    "pdfminer.six",
    "Pillow",
    "python-docx",
    "reportlab",
]
authors = [
  {name = "Andrew Griess"}
]
keywords = ["evil font", "evil font tool", "font obfuscation", "obfuscation", "fonts", "red team", "ttf", "woff", "pdf", "docx", "html"]

[project.scripts]
evilfonttool = "evilfonttool.cli:main"

[project.urls]
Homepage = "https://doctoreww.github.io/EvilFontTool/"
Repository = "https://github.com/DoctorEww/EvilFontTool"
Issues = "https://github.com/DoctorEww/EvilFontTool/issues"
Demo = "https://doctoreww.github.io/EvilFontTool/"

[tool.hatch.build.targets.wheel]
packages = ["src/evilfonttool"]
